--- a/styles.css
+++ b/styles.css
@@ -89,10 +89,10 @@
     width: 65%;
 }
 
-/* OFFER SECTION  */
+/* WE OFFER SECTION  */
 .container__we_offer{
     width: 90%;
-    margin: 3rem auto;
+    margin: 3rem 5%;
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
@@ -101,6 +101,7 @@
 }
 
 .we__offer_card{
+    width: 350px;
     border-radius: 10px;
     overflow: hidden;
     border: 1px solid grey;
@@ -128,7 +129,7 @@
 
 .we__offer_content{
     padding: 0 20px 15px;
-    font-size: 15px;
+    font-size: 14px;
     text-align: left;
 }
 
@@ -142,6 +143,91 @@
     font-weight: 400;
 }
 
+/* COLLECTIONS CARD */
+.collections h2{
+    margin-left: 14.25%;
+    font-weight: 500;
+    font-size: 2rem;
+}
+
+.sub__heading_container span:first-child{
+    margin-left: 14.25%;
+}
+
+.collections .sub__heading_container{
+    font-weight: 300;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    font-size: 15px;
+}
+
+.sub__heading_container span:nth-child(2){
+    color: #ff7e8b;
+    cursor: pointer;
+    font-size: 13px;
+    margin: 0 5%;
+}
+
+.collections_card_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-top: 1.5rem;
+}
+
+.collections_card_container .card{
+    position: relative;
+    height: 310px;
+    min-width: 265px;
+    border-radius: 10px;
+    background-position: center;
+    background-size: cover;
+}
+
+.card1{
+    background-image: url(./images/collection1.jpg);
+}
+
+.card2{
+    background-image: url(./images/collection2.jpg);
+}
+
+.card3{
+    background-image: url(./images/collection3.jpg);
+}
+.card4{
+    background-image: url(./images/collection4.jpg);
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.7)0%,
+        rgba(0, 0, 0, 0.3)50%,
+        rgba(0, 0, 0, 0)100%
+    )
+
+}
+
+.collections_card_container .card .content{
+    position: absolute;
+    color: white;
+    padding: 12px 16px;
+    bottom: 0;
+    left: 0;
+    font-size: 0.8rem;
+}
 
 
 
